--- a/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
@@ -611,6 +611,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In Univariate Analysis we will analize our Dependent variable and Independent variable separately using different Displot and bar plot."
+      ],
+      "metadata": {
+        "id": "Clg2pphyEaGk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -864,6 +873,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Here Red dashed line denotes Mean and Green dashed line denotes Median.\n",
+        "\n",
         "From above graph we can see that there is much difference in between mean and median for all independent variable. It means independent variables are not normally distributed."
       ],
       "metadata": {
@@ -908,6 +919,170 @@
       ],
       "metadata": {
         "id": "atBcW2GNB4HQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Applying log transformation on Independent Variables\n",
+        "for col in numeric_features[:-1]:\n",
+        "    fig = plt.figure(figsize=(12, 6))\n",
+        "    ax = fig.gca()\n",
+        "    feature = np.log(new_df[col])\n",
+        "    feature.hist(bins=50, ax = ax)\n",
+        "    ax.axvline(feature.mean(), color='red', linestyle='dashed', linewidth=2)\n",
+        "    ax.axvline(feature.median(), color='green', linestyle='dashed', linewidth=2)    \n",
+        "    ax.set_title(col)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "NqY3gQMzCgKx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here we can see after applying Log Transformation the difference between Mean & Median is almost finished."
+      ],
+      "metadata": {
+        "id": "0csNsw9gDUfs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Bivariate Analysis**"
+      ],
+      "metadata": {
+        "id": "fjzatvuWFkJr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In Bivariate Analysis we will see relation between Dependent and Independent Variables using scatter plot and heat map."
+      ],
+      "metadata": {
+        "id": "IUDE0F0wFqSC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## *Scatter plot for finding relation between Dependent & Independent variable*"
+      ],
+      "metadata": {
+        "id": "20kji4f2G_7h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Using scatter plot\n",
+        "for col in numeric_features[:-1]:\n",
+        "  fig = plt.figure(figsize = (10,5))\n",
+        "  ax = fig.gca()\n",
+        "  features = new_df[col]\n",
+        "  label = new_df['Close']\n",
+        "  correlation = features.corr(label)\n",
+        "  plt.scatter(x = features,y = label)\n",
+        "  plt.xlabel(col)\n",
+        "  plt.ylabel('Close')\n",
+        "  plt.title('Close Vs  ' + col + '_ correlation:' + str(correlation))\n",
+        "  z = np.polyfit(df[col],df['Close'],1)\n",
+        "  y_hat = np.poly1d(z)(df[col])\n",
+        "  plt.plot(df[col] , y_hat, \"r--\",lw = 2)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "JZZXVECkHz9B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From above Scatter plot we can say all independent variables high correlation with our dependent variable.\n",
+        "\n",
+        "So, we cannot drop any column for modelling all the independent variables are important."
+      ],
+      "metadata": {
+        "id": "nxRvH_4vIIie"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## *Heatmap for checking correlation with Independent variables*"
+      ],
+      "metadata": {
+        "id": "EwglMTh9JTkh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#Correlation heatmap\n",
+        "plt.figure(figsize=(12,7))\n",
+        "sns.heatmap(new_df.corr(),cmap='PiYG',annot=True)"
+      ],
+      "metadata": {
+        "id": "IQwL15vgI5ak"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here dependent variable shows high correlation with all independent variables."
+      ],
+      "metadata": {
+        "id": "OXX9Ex5JJnHE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## *Checking Multicollinearity*"
+      ],
+      "metadata": {
+        "id": "iU1RTaFPCZNH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Calculating VIF\n",
+        "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+        "def calculate_vif(X):\n",
+        "\n",
+        "  # calculating VIF\n",
+        "  vif =pd.DataFrame()\n",
+        "  vif[\"variables\"] = X.columns\n",
+        "  vif[\"VIF\"] = [variance_inflation_factor(X.values, i) for i in range(X. shape[1])]\n",
+        "\n",
+        "  return(vif)\n",
+        "\n",
+        "calculate_vif(new_df[[i for i in new_df.describe().columns if i not in ['Date', 'Close']]])"
+      ],
+      "metadata": {
+        "id": "lDyRS_GWF5Dn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here VIF of every independent variable is high so we cannot drop any of the columns."
+      ],
+      "metadata": {
+        "id": "pZqgLLklHMB1"
       }
     },
     {
