--- a/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
@@ -277,6 +277,8 @@
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.metrics import r2_score\n",
         "from sklearn.metrics import mean_squared_error\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "from sklearn.metrics import mean_absolute_percentage_error\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "from datetime import datetime\n",
@@ -1084,6 +1086,513 @@
       "metadata": {
         "id": "pZqgLLklHMB1"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## *Train Test Split*"
+      ],
+      "metadata": {
+        "id": "hdeA8Q8JmjlB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Data transformation\n",
+        "from scipy.stats import zscore\n",
+        "X = X.apply(zscore)\n",
+        "Y = np.log10(Y)"
+      ],
+      "metadata": {
+        "id": "90ox9oLftXSI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Creating Trainig and Testing set of our dataset\n",
+        "X_train, X_test, Y_train, Y_test=train_test_split(X,Y,test_size=0.2,random_state=0)\n",
+        "print('Shape of X_train Set:',X_train.shape)\n",
+        "print('Shape of X_test Set:',X_test.shape)\n",
+        "print('Shape of Y_train Set:',Y_train.shape)\n",
+        "print('Shape of Y_test Set:',Y_test.shape)"
+      ],
+      "metadata": {
+        "id": "PyW3FSvylL1N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here train_test_split() is used to split the dataset into training dataset and testing dataset.\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   **Train dataset**: It is the dataset which is used in model building. Here it constitutes of 80% of the dataset.\n",
+        "*   **Test dataset**: It is the dataset which is used to test our fit model.\n",
+        "Here it constitutes 20% of the dataset.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rLFZMiLfnnpc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Transforming data\n",
+        "scaler = MinMaxScaler()\n",
+        "X_train = scaler.fit_transform(X_train)\n",
+        "X_test = scaler.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "7rJkCD-BuQxY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MinMax Scaler shrinks the data within the given range, usually of 0 to 1. It transforms data by scaling features to a given range. It scales the values to a specific value range without changing the shape of the original distribution."
+      ],
+      "metadata": {
+        "id": "stRHJNdhvoNu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Linear Regression**"
+      ],
+      "metadata": {
+        "id": "K5JZpau4qahT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Linear Regression is a machine learning algorithm based on supervised learning. It performs a regression task. Regression models a target prediction value based on independent variables.Linear regression performs the task to predict a dependent variable value (y) based on a given independent variable (x). So, this regression technique finds out a linear relationship between x (input) and y(output)."
+      ],
+      "metadata": {
+        "id": "SOXxqyzWqkAD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Applying Linear Regression\n",
+        "regressor=LinearRegression()\n",
+        "regressor_model=regressor.fit(X_train,Y_train)"
+      ],
+      "metadata": {
+        "id": "Pk3xhtMHrTlM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Checking the training accuracy of model\n",
+        "round(regressor.score(X_train,Y_train),4)"
+      ],
+      "metadata": {
+        "id": "fuOngOAzrpVN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, our model training accuracy is 80.91%."
+      ],
+      "metadata": {
+        "id": "pYpSgcP5vvkm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test accuracy of linear regression model\n",
+        "round(regressor.score(X_test, Y_test), 4)"
+      ],
+      "metadata": {
+        "id": "gwOHBb0Rv_X_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, our model test accuracy is 82.83%."
+      ],
+      "metadata": {
+        "id": "qaInKFqgwmMr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#prediction of test data\n",
+        "Y_pred = regressor.predict(X_test)\n",
+        "Y_pred"
+      ],
+      "metadata": {
+        "id": "1-cFAWYIxSAN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#converting Y_test data into array\n",
+        "np.array(Y_test)"
+      ],
+      "metadata": {
+        "id": "PcFtnNbgx_qO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Creating the DataFrame of test and train Dataset\n",
+        "train_Dataset = pd.DataFrame(X_train,Y_train)\n",
+        "test_Dataset = pd.DataFrame(Y_test)\n",
+        "test_Dataset.rename(columns= {'Close' :'Actual Closing Price'}, inplace =True)\n",
+        "     "
+      ],
+      "metadata": {
+        "id": "wxY8QjlN2Klr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Actual Closing Price VS Predicted closing Price\n",
+        "test_Dataset['Predicted Closing Price']= Y_pred\n",
+        "test_Dataset.head()"
+      ],
+      "metadata": {
+        "id": "a6tA9cX22j3H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test Performance of Linear Regregression\n",
+        "print(\"MSE :\", round(mean_squared_error(Y_test, Y_pred), 4))\n",
+        "print(\"RMSE :\", round(math.sqrt(mean_squared_error(Y_test, Y_pred)), 4)) \n",
+        "print(\"MAE :\", round(mean_absolute_error(Y_test, Y_pred), 4))\n",
+        "print(\"MAPE :\", round(mean_absolute_percentage_error(Y_test, Y_pred), 4))\n",
+        "print(\"r2 :\", round(r2_score(Y_test, Y_pred),4))"
+      ],
+      "metadata": {
+        "id": "uiGG1CqL4aAn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*  **MSE** : The Mean Squared Error of an estimator measures the average of error squares i.e. the average squared difference between the estimated values and true value. It is a risk function, corresponding to the expected value of the squared error loss. It is always non – negative and values close to zero are better.\n",
+        "*   **RMSE** :Root Mean Square Error is the standard deviation of the residuals (prediction errors). Residuals are a measure of how far from the regression line data points are; RMSE is a measure of how spread out these residuals are. In other words, it tells you how concentrated the data is around the line of best fit.\n",
+        "*   **MAE** : Mean Absolute Error calculates the average difference between the calculated values and actual values. It is also known as scale-dependent accuracy as it calculates error in observations taken on the same scale.\n",
+        "*   **MAPE** : It measures accuracy of a forecast system. It measures this accuracy as a percentage, and can be calculated as the average absolute percent error for each time period minus actual values divided by actual values.\n",
+        "*   **r2** : R-Squared is a statistical measure in a regression model that determines the proportion of variance in the dependent variable that can be explained by the independent variable.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DIkH4trt69X3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Actual Price VS Predicted price for Linear Regression plot\n",
+        "plt.figure(figsize=(12,5))\n",
+        "plt.plot(10**(np.array(Y_test)),color='red')\n",
+        "plt.plot(10**(Y_pred),color='green')\n",
+        "plt.suptitle('Actual Price Vs Predicted Price', fontsize =18)\n",
+        "plt.legend(['Actual', 'Predicted'], fontsize = 16)\n",
+        "plt.xlabel('No. of Test Data', fontsize= 16)\n",
+        "plt.ylabel('Closing Price', fontsize= 16)\n",
+        "plt.grid()"
+      ],
+      "metadata": {
+        "id": "P2FYDkB0LeE4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Lasso Regression**"
+      ],
+      "metadata": {
+        "id": "DUnWIl03ObAS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The word “LASSO” stands for Least Absolute Shrinkage and Selection Operator.\n",
+        "\n",
+        "Lasso regression is a regularization technique. It is used over regression methods for a more accurate prediction. This model uses shrinkage. Shrinkage is where data values are shrunk towards a central point as the mean."
+      ],
+      "metadata": {
+        "id": "qEBoUMhAR68R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Applying Lasso Regression\n",
+        "lasso = Lasso(alpha=0.005, max_iter = 3000)\n",
+        "lasso.fit(X_train, Y_train) "
+      ],
+      "metadata": {
+        "id": "En5VmJhpR5uJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Accuracy of Lasso regression model\n",
+        "round(lasso.score(X_train, Y_train), 4)"
+      ],
+      "metadata": {
+        "id": "E2J3fLEPToMq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Prediction of train data\n",
+        "Y_pred_lasso = lasso.predict(X_test)\n",
+        "Y_pred_lasso"
+      ],
+      "metadata": {
+        "id": "hErI8jUPVSI2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Converting Y_test data into array\n",
+        "np.array(Y_test)"
+      ],
+      "metadata": {
+        "id": "-AGj7BMkVjBL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test Performance of lasso regression model\n",
+        "\n",
+        "print(\"MSE :\",round(mean_squared_error(Y_test, Y_pred_lasso), 4))\n",
+        "print(\"RMSE :\",round(math.sqrt(mean_squared_error(Y_test, Y_pred_lasso)),4))\n",
+        "print(\"MAE :\",round(mean_absolute_error(Y_test, Y_pred_lasso),4))\n",
+        "print(\"MAPE :\",round(mean_absolute_percentage_error(Y_test, Y_pred_lasso),4))\n",
+        "print(\"R2 :\",round(r2_score(Y_test, Y_pred_lasso), 4))"
+      ],
+      "metadata": {
+        "id": "WSOQpXrQXDS2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Actual price vs Predicted price for lasso regression ploting\n",
+        "plt.figure(figsize= (12,5))\n",
+        "plt.plot(10**(np.array(Y_test)),color='red')\n",
+        "plt.plot(10**(Y_pred_lasso),color='green')\n",
+        "plt.suptitle('Actual Price Vs Predicted Price', fontsize =18)\n",
+        "plt.legend(['Predicted', 'Actual'], fontsize = 16)\n",
+        "plt.xlabel('No of Test Data', fontsize= 16)\n",
+        "plt.ylabel('Closing Price', fontsize = 16)\n",
+        "plt.grid()"
+      ],
+      "metadata": {
+        "id": "EqahbgHmXSRO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ***Cross Validation of Lasso***"
+      ],
+      "metadata": {
+        "id": "7kVbWUsrhSxB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cross validation (CV) is one of the technique used to test the effectiveness of a machine learning models by dividing data into two segments, one used to learn or train a model and the other used to validate the model.If the model performs well over the test data and gives good accuracy, it means the model hasn’t overfitted the training data and can be used for prediction. It is also a re-sampling procedure used to evaluate a model if we have a limited data."
+      ],
+      "metadata": {
+        "id": "mRbhKg-MhxM1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Hyper parameter of Tuning For Lasso Regression\n",
+        "lasso_cv=Lasso()\n",
+        "parameters={'alpha':[1e-15,1e-13,1e-10,1e-8,1e-5,1e-4,1e-3,1e-2,1e-1,1,5,10,20,30,40,45,50,55,60,100]}\n",
+        "lasso_regressor=GridSearchCV(lasso_cv,parameters,scoring='neg_mean_squared_error',cv=3)\n",
+        "lasso_regressor.fit(X_train,Y_train)"
+      ],
+      "metadata": {
+        "id": "sfxe6465hdBs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Finding best parameter\n",
+        "print(\"The best fit alpha value is found out to be :\" ,lasso_regressor.best_params_)\n",
+        "print(\"using \",lasso_regressor.best_params_, \" the negative mean squared error is: \", lasso_regressor.best_score_)"
+      ],
+      "metadata": {
+        "id": "ySZ1e4AKioJZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Y_lasso_pred1=lasso_regressor.predict(X_test)\n",
+        "Y_lasso_pred1"
+      ],
+      "metadata": {
+        "id": "jaX-IrDfjlik"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Test performance of Lasso after Cross-Validation\n",
+        "print(\"MSE value is :\",round(mean_squared_error(Y_test, Y_lasso_pred1), 4))\n",
+        "print(\"RMSE value is :\",round(math.sqrt(mean_squared_error(Y_test, Y_lasso_pred1)),4))\n",
+        "print(\"MAE value is :\",round(mean_absolute_error(Y_test, Y_lasso_pred1),4))\n",
+        "print(\"MAPE value is :\",round(mean_absolute_percentage_error(Y_test, Y_lasso_pred1),4))\n",
+        "print(\"r2 score is :\",round(r2_score(Y_test, Y_lasso_pred1), 4))"
+      ],
+      "metadata": {
+        "id": "uSqKctoYj1nx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Ridge Regression**"
+      ],
+      "metadata": {
+        "id": "iJPcA5LGZO_v"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ridge Regression is an adaptation of the popular and widely used linear regression algorithm. It enhances regular linear regression by slightly changing its cost function, which results in less overfit models."
+      ],
+      "metadata": {
+        "id": "mxHpGAmrZeXr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Applying Ridge Regression\n",
+        "ridge = Ridge (alpha= 0.1)\n",
+        "ridge.fit(X_train,Y_train)"
+      ],
+      "metadata": {
+        "id": "OpSHzACVb61Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Accuracy of Ridge regression model\n",
+        "round(ridge.score(X_train, Y_train), 4)"
+      ],
+      "metadata": {
+        "id": "HfgfeZTWcTln"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Prediction of test data\n",
+        "Y_pred_ridge = ridge.predict(X_test)\n",
+        "Y_pred_ridge"
+      ],
+      "metadata": {
+        "id": "rra5TJtQdue9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Converting Y_test data into array\n",
+        "np.array(Y_test)"
+      ],
+      "metadata": {
+        "id": "rPv6bYlJeHZ8"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
