--- a/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
@@ -1310,6 +1310,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Here all metrics are small and r2 should be near to 1 for proper prediction."
+      ],
+      "metadata": {
+        "id": "XwlAMexR6r-A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "\n",
         "*  **MSE** : The Mean Squared Error of an estimator measures the average of error squares i.e. the average squared difference between the estimated values and true value. It is a risk function, corresponding to the expected value of the squared error loss. It is always non – negative and values close to zero are better.\n",
@@ -1345,6 +1354,20 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, we can some data is not predicted well enough so we will apply regularization techniques:\n",
+        "\n",
+        "\n",
+        "*   Lasso Regression\n",
+        "*   Ridge Regression\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "K6JLsseE69DZ"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1392,6 +1415,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Here, Lasso Regression has 80.59% accuracy which is not much change than linear regression."
+      ],
+      "metadata": {
+        "id": "uoltqKr97kYY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Prediction of train data\n",
@@ -1434,6 +1466,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Here, all the metrics are small but r2 should be near to 1 for a good model."
+      ],
+      "metadata": {
+        "id": "DHRas-ab77hg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Actual price vs Predicted price for lasso regression ploting\n",
@@ -1455,7 +1496,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ***Cross Validation of Lasso***"
+        "Not, enough change is seen after applying Lasso Regression then now we apply Cross validation on it."
+      ],
+      "metadata": {
+        "id": "UlyZ5Buh8HrS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ***Cross Validation on Lasso***"
       ],
       "metadata": {
         "id": "7kVbWUsrhSxB"
@@ -1514,17 +1564,54 @@
       "cell_type": "code",
       "source": [
         "#Test performance of Lasso after Cross-Validation\n",
-        "print(\"MSE value is :\",round(mean_squared_error(Y_test, Y_lasso_pred1), 4))\n",
-        "print(\"RMSE value is :\",round(math.sqrt(mean_squared_error(Y_test, Y_lasso_pred1)),4))\n",
-        "print(\"MAE value is :\",round(mean_absolute_error(Y_test, Y_lasso_pred1),4))\n",
-        "print(\"MAPE value is :\",round(mean_absolute_percentage_error(Y_test, Y_lasso_pred1),4))\n",
-        "print(\"r2 score is :\",round(r2_score(Y_test, Y_lasso_pred1), 4))"
+        "print(\"MSE  :\",round(mean_squared_error(Y_test, Y_lasso_pred1), 4))\n",
+        "print(\"RMSE  :\",round(math.sqrt(mean_squared_error(Y_test, Y_lasso_pred1)),4))\n",
+        "print(\"MAE  :\",round(mean_absolute_error(Y_test, Y_lasso_pred1),4))\n",
+        "print(\"MAPE  :\",round(mean_absolute_percentage_error(Y_test, Y_lasso_pred1),4))\n",
+        "print(\"r2  :\",round(r2_score(Y_test, Y_lasso_pred1), 4))"
       ],
       "metadata": {
         "id": "uSqKctoYj1nx"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, there is not any enough changes in the metrics."
+      ],
+      "metadata": {
+        "id": "SjvDtf958n-l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plotting Lasso after Cross Validation\n",
+        "plt.figure(figsize=(12,5))\n",
+        "plt.plot(10**(Y_lasso_pred1),color='red')\n",
+        "plt.plot(10**(np.array(Y_test)),color='green')\n",
+        "plt.suptitle('Actual Price Vs Predicted Price', fontsize= 18)\n",
+        "plt.legend(['Predicted','Actual'], fontsize =16)\n",
+        "plt.xlabel('No. of Test Data', fontsize =16)\n",
+        "plt.ylabel('Closing Price', fontsize =16)\n",
+        "plt.grid()"
+      ],
+      "metadata": {
+        "id": "dg3AMqyNdzvW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "After cross validation also this model does not show better prediction."
+      ],
+      "metadata": {
+        "id": "VbOGwlbY81Tm"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1570,6 +1657,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Accuracy of Ridge Regression is 80.78% ."
+      ],
+      "metadata": {
+        "id": "Ac7ndWWa9yTg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Prediction of test data\n",
@@ -1593,6 +1689,276 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Checking the test performance of Ridge Regression Using Evaluation MAtrics\n",
+        "print(\"MSE  :\",round(mean_squared_error(Y_test, Y_pred_ridge), 4))\n",
+        "print(\"RMSE  :\",round(math.sqrt(mean_squared_error(Y_test, Y_pred_ridge)),4))\n",
+        "print(\"MAE  :\",round(mean_absolute_error(Y_test, Y_pred_ridge),4))\n",
+        "print(\"MAPE  :\",round(mean_absolute_percentage_error(Y_test, Y_pred_ridge),4))\n",
+        "print(\"r2  :\",round(r2_score(Y_test, Y_pred_ridge), 4))"
+      ],
+      "metadata": {
+        "id": "CC9AFwcxh9C5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Plotting Ridge Regression\n",
+        "plt.figure(figsize=(12,5))\n",
+        "plt.plot(10**(Y_pred_ridge),color='red')\n",
+        "plt.plot(10**(np.array(Y_test)),color='green')\n",
+        "plt.suptitle('Actual Price Vs Predicted Value', fontsize= 18)\n",
+        "plt.xlabel('No. of Test Data', fontsize = 16)\n",
+        "plt.ylabel('Clossing Price', fontsize= 16)\n",
+        "plt.grid()"
+      ],
+      "metadata": {
+        "id": "xkfaqaFno6yz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "No any subsequent  changes are seen in this so we will apply cross validation on it."
+      ],
+      "metadata": {
+        "id": "m49LnSYQ-CVm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ***Cross Validation on Ridge***"
+      ],
+      "metadata": {
+        "id": "4SdKfAxhrLrp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Hyperparameter of Tunning\n",
+        "ridge_cv = Ridge()\n",
+        "parameters = {'alpha': [1e-15, 1e-13, 1e-10, 1e-8, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1, 1, 5, 10, 20, 30, 40, 45, 50, 55, 60, 100]}\n",
+        "ridge_regressor = GridSearchCV(ridge_cv, parameters, scoring = 'neg_mean_squared_error', cv=3)\n",
+        "ridge_regressor.fit(X_train, Y_train)"
+      ],
+      "metadata": {
+        "id": "W1jnqilRrk67"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Printing best alpha value\n",
+        "print(\"The best fit alpha value is found out to be :\",ridge_regressor.best_params_)\n",
+        "print(\"using \",ridge_regressor.best_params_, \" the negative mean squared error is: \", ridge_regressor.best_score_)"
+      ],
+      "metadata": {
+        "id": "5hHxu3basVUz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Prediction after CV\n",
+        "Y_ridge_pred1 = ridge_regressor.predict(X_test)\n",
+        "Y_ridge_pred1\n",
+        "     "
+      ],
+      "metadata": {
+        "id": "fj_NuBxGs44L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Checking the test performance of Ridge Regression after Cross Validation  \n",
+        "print(\"MSE  :\",round(mean_squared_error(Y_test, Y_ridge_pred1), 4))\n",
+        "print(\"RMSE  :\",round(math.sqrt(mean_squared_error(Y_test, Y_ridge_pred1)),4))\n",
+        "print(\"MAE  :\",round(mean_absolute_error(Y_test, Y_ridge_pred1),4))\n",
+        "print(\"MAPE  :\",round(mean_absolute_percentage_error(Y_test, Y_ridge_pred1),4))\n",
+        "print(\"r2  :\",round(r2_score(Y_test, Y_ridge_pred1), 4))"
+      ],
+      "metadata": {
+        "id": "r9bYeFS5thl9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Actual Price Vs Predicted Price for Ridge regression\n",
+        "plt.figure(figsize=(12,5))\n",
+        "plt.plot(10**(Y_ridge_pred1),color='red')\n",
+        "plt.plot(10**(np.array(Y_test)),color='green')\n",
+        "plt.suptitle('Actual Price Vs Predicted Price', fontsize = 18)\n",
+        "plt.legend(['Predicted','Actual'], fontsize = 16)\n",
+        "plt.xlabel('No. of Test Data', fontsize= 16)\n",
+        "plt.ylabel('Closing Price', fontsize= 16)\n",
+        "plt.grid()"
+      ],
+      "metadata": {
+        "id": "qJhX2ECQxBx5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "After looking at the plotting we can say that now we should apply gradient boosting technique such as XG Boost."
+      ],
+      "metadata": {
+        "id": "kvibxcLC-lWf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **XG Boost Regression**"
+      ],
+      "metadata": {
+        "id": "lgn1DgR2yTKX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "XG Boost is a powerful approach for building supervised regression models. XG Boost is one of the ensemble learning methods. XGBoost expects to have the base learners which are uniformly bad at the remainder so that when all the predictions are combined, bad predictions cancels out and better one sums up to form final good predictions. "
+      ],
+      "metadata": {
+        "id": "vfQgnWQSyshv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importing XGBoost Regressor and fitting data in it\n",
+        "from xgboost import XGBRegressor\n",
+        "\n",
+        "xgb = XGBRegressor()\n",
+        "xgb.fit(X_train,Y_train)"
+      ],
+      "metadata": {
+        "id": "pSw-AOCs1haF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Accuracy of XG Boost regression model\n",
+        "round(xgb.score(X_train,Y_train),4)"
+      ],
+      "metadata": {
+        "id": "aAp5mZVZ2Hst"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Accuracy of XG Boost is 99.88% ."
+      ],
+      "metadata": {
+        "id": "CKQYjPqU-5d6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Prediction after XG Boost\n",
+        "Y_pred_XG = xgb.predict(X_test)\n",
+        "Y_pred_XG"
+      ],
+      "metadata": {
+        "id": "NguxGdfD3UzD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Converting test data into array\n",
+        "np.array(Y_test)"
+      ],
+      "metadata": {
+        "id": "AyUsGyG433y7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test Performance of XGBoost model after validation\n",
+        "print(\"MSE :\",round(mean_squared_error(Y_test, Y_pred_XG), 4))\n",
+        "print(\"RMSE :\",round(math.sqrt(mean_squared_error(Y_test, Y_pred_XG)),4))\n",
+        "print(\"MAE :\",round(mean_absolute_error(Y_test, Y_pred_XG),4))\n",
+        "print(\"MAPE :\",round(mean_absolute_percentage_error(Y_test, Y_pred_XG),4))\n",
+        "print(\"r2 :\",round(r2_score(Y_test, Y_pred_XG), 4))"
+      ],
+      "metadata": {
+        "id": "4cpBdVJz4L8i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, all the metrics are very small and r2 is close to 1 which means it is good predictive model."
+      ],
+      "metadata": {
+        "id": "lsJIKLswBsIJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Actual Price vs. Predicted Price for XGboost after Validation Plotting \n",
+        "plt.figure(figsize=(12,5))\n",
+        "plt.plot(10**(np.array(Y_test)),color='red')\n",
+        "plt.plot(10**(Y_pred_XG),color='green')\n",
+        "plt.suptitle('Actual Price Vs. Predicted Price', fontsize=18)\n",
+        "plt.legend(['Actual','Predicted'], fontsize=16)\n",
+        "plt.xlabel('No. of Test Data', fontsize=16)\n",
+        "plt.ylabel('Closing Price', fontsize=16)\n",
+        "plt.grid()"
+      ],
+      "metadata": {
+        "id": "jQxEDFqO45u9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From the plotting we can say that here prediction are close enough as compared to actual data."
+      ],
+      "metadata": {
+        "id": "XJGW01kHB9qQ"
+      }
     },
     {
       "cell_type": "markdown",
